--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,8 @@ dependencies = [
     "catboost",
     "xgboost",
     "dill",
+    "pydantic",
+    "fastapi>=0.95",
+    "uvicorn[standard]>=0.21",
+    "pydantic>=1.10"
 ]
